[tool.poetry]
name = "databricks_cicd"
version = "0.1.0"
description = ""
authors = ["sebastian hansen <sebastian.hansen@dataalchemy.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
databricks-connect = "^10.4.12"
pandas = "^1.5.2"
requests = "^2.28.1"
databricks-cli = "^0.17.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"